--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Tessellate by HTML5 UP
 	html5up.net | @ajlkn
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Welcome to Tessellate</h1>
-					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Seja Bem Vindo ao WorkShop GIT Atento </h1>
+					<p>Equipe Gestão de Configuraçã0 - DevOps <a href="http://html5up.net">HTML5 UP</a></p>
 				</header>
 				<footer>
 					<a href="#first" class="button scrolly">Proceed to second phase</a>
